Update deployment.yaml with docker repo

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
         - name: html-app
-          image: deepaks374/html-app:latest
+          image: nitincc10/html-app:latest
           ports:
             - containerPort: 80
